k8s/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: caller-app-loadbalancer
  labels:
    app: caller-app
    type: loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: caller-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
