k8s/processor-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: processor-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: processor-api
  template:
    metadata:
      labels:
        app: processor-api
    spec:
      containers:
        - name: processor-api
          image: kubepulse/processor-api:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: processor-api
spec:
  type: NodePort
  selector:
    app: processor-api
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30081
